--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,4 @@
 body {
 	margin: 0 5vw;
+	overflow-x: hidden;
 }
